// Copyright 2022 CeresDB Project Authors. Licensed under Apache-2.0.

// Sst types
syntax = "proto3";
package sst;

import "common.proto";
import "analytic_common.proto";

message SstBloomFilter {
  message RowGroupFilter {
    repeated bytes column_filters = 1;
  };

  repeated RowGroupFilter row_group_filters = 1;
}

message SstMetaData {
  // Min key in the sst
  bytes min_key = 1;
  // Max key in the sst
  bytes max_key = 2;
  // Max sequence number in the sst
  uint64 max_sequence = 3;
  // The time range of the sst
  common.TimeRange time_range = 4;
  common.TableSchema schema = 5;
  uint64 size = 6;
  uint64 row_num = 7;
  analytic_common.StorageFormatOptions storage_format_opts = 8;
  SstBloomFilter bloom_filter = 9;
}
